// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly fetching ebooks 1`] = `
<div>
  <header>
    <span
      class=""
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Loading...
    </div>
  </div>
  <footer>
    <div>
      <span
        class=""
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly fetching ebooks failed 1`] = `
<div>
  <header>
    <span
      class=""
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Fail
    </div>
  </div>
  <footer>
    <div>
      <span
        class=""
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing fail 1`] = `
<div>
  <header>
    <span
      class=""
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Purchase failed
    </div>
  </div>
  <footer>
    <div>
      <span
        class=""
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing initial 1`] = `
<div>
  <header>
    <span
      class=""
    >
      E-book Store
    </span>
  </header>
  <div>
    <span
      class=""
    >
      Welcome to the best place for you to learn about Latin América E-commerce. Start to learn now and discovery ways options to improve your sales.
    </span>
    <div>
      <ul>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="1"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 1
              </span>
              <span
                class=""
              >
                The ebook 1
              </span>
            </div>
            <span
              class=""
            >
              R$ 100,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="2"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 2
              </span>
              <span
                class=""
              >
                The ebook 2
              </span>
            </div>
            <span
              class=""
            >
              R$ 200,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="3"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 3
              </span>
              <span
                class=""
              >
                The ebook 3
              </span>
            </div>
            <span
              class=""
            >
              R$ 300,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="4"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 4
              </span>
              <span
                class=""
              >
                The ebook 4
              </span>
            </div>
            <span
              class=""
            >
              R$ 400,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="5"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 5
              </span>
              <span
                class=""
              >
                The ebook 5
              </span>
            </div>
            <span
              class=""
            >
              R$ 500,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="6"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 6
              </span>
              <span
                class=""
              >
                The ebook 6
              </span>
            </div>
            <span
              class=""
            >
              R$ 600,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="7"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 7
              </span>
              <span
                class=""
              >
                The ebook 7
              </span>
            </div>
            <span
              class=""
            >
              R$ 700,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="8"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 8
              </span>
              <span
                class=""
              >
                The ebook 8
              </span>
            </div>
            <span
              class=""
            >
              R$ 800,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="9"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 9
              </span>
              <span
                class=""
              >
                The ebook 9
              </span>
            </div>
            <span
              class=""
            >
              R$ 900,00
            </span>
          </div>
        </li>
        <li>
          <div>
            <input
              class=""
              type="checkbox"
              value="10"
            />
            <img
              class=""
              src=""
            />
            <div>
              <span
                class=""
              >
                Ebook 10
              </span>
              <span
                class=""
              >
                The ebook 10
              </span>
            </div>
            <span
              class=""
            >
              R$ 1000,00
            </span>
          </div>
        </li>
      </ul>
      <div>
        <span
          class=""
        >
          TOTAL
        </span>
        <span
          class=""
        >
          R$ 0,00
        </span>
      </div>
    </div>
    <form>
      <div>
        <header>
          <span
            class=""
          >
            1
          </span>
          <span
            class=""
          >
            Personal data
          </span>
        </header>
      </div>
      <div>
        <header>
          <span
            class=""
          >
            2
          </span>
          <span
            class=""
          >
            Billing Address
          </span>
        </header>
      </div>
      <div>
        <header>
          <span
            class=""
          >
            3
          </span>
          <span
            class=""
          >
            Payment
          </span>
        </header>
      </div>
    </form>
  </div>
  <footer>
    <div>
      <span
        class=""
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;

exports[`renders correctly purchasing success 1`] = `
<div>
  <header>
    <span
      class=""
    >
      E-book Store
    </span>
  </header>
  <div>
    <div>
      Purchase success
    </div>
  </div>
  <footer>
    <div>
      <span
        class=""
      >
        E-book Store
      </span>
      <span
        class=""
      >
        Powered by EBANX • Products B2B
      </span>
    </div>
  </footer>
</div>
`;
